# training

./: Bar.cpp  Bar.h  Baz.cpp  Baz.h  Foo.cpp  Foo.h  main.cpp  meson.build
libs/: Bar.cpp  Bar.h  Baz.cpp  Baz.h  Foo.cpp  Foo.h  meson.build
